--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WorryWanish</title>
-    <script src="C:\Users\whiff\OneDrive\Desktop\buttons\assignment02\jquery.js"></script>
+    <script src="jquery.js"></script>
     <script>
         $(document).ready(function () {
             $("#process").hide();
