--- a/badthoughtabout.html
+++ b/badthoughtabout.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WorryWanish About</title>
 
-    <script src="C:\Users\whiff\OneDrive\Desktop\buttons\assignment02\jquery.js"></script>
+    <script src="jquery.js"></script>
     <script>
         $(document).ready(function () {
 
